--- a/Files/.env
+++ b/Files/.env
@@ -1,4 +1,5 @@
-HOST = localhost
-PORT = 5500
-STORE_ID = idk6131bf59be372
-STORE_PASSWORD = idk6131bf59be372@ssl
+DB_HOST=localhost
+DB_PORT=8080
+DB_ROOT=localhost
+STORE_ID=idk6131bf59be372
+STORE_PASSWORD=idk6131bf59be372@ssl
